# bjt_agent

./: .gitignore  .gitmodules  .mcp.json  111  CLAUDE.md  docker-compose-cluster.yml  docker-compose.yml  perf_data_20260526_145143.json  perf_report_20260526_145143.txt  test-comprehensive.sqlite  test_bidreviewagent_validation.py
backend/: .env.example  __init__.py  celery_app.py  config.py  logging_config.py  main.py  mcp.json  pyproject.toml  requirements.txt
backend/agent/: __init__.py  bid_review_agent.py  duplicate_check_agent.py  duplicate_master_agent.py  prompt.py  quality_evaluation.py
backend/api/: __init__.py  admin.py  announcements.py  auth.py  billing.py  deps.py  documents.py  duplicate_check.py  events.py  experience.py  feedback.py  knowledge.py  profile.py  projects.py  review.py  review_sessions.py  share.py  system_status.py
backend/experience/: __init__.py  case_extractor.py  cluster_manager.py  maturity_scorer.py  models.py  retriever.py  service.py  skill_extractor.py
backend/middleware/: rate_limit.py  upload_throttle.py
backend/migrations/: 001_create_project_review_results.sql  002_add_todo_id_to_agent_step.sql  003_add_last_heartbeat_to_review_tasks.sql  004_add_max_concurrency_to_review_tasks.sql  005_add_check_item_name.sql  006_add_duration_seconds_to_review_tasks.sql  007_add_max_steps_brain_capacity.sql  008_add_docling_json_path.sql  009_create_experience_tables.sql  010_create_ai_usage_records.sql  011_add_user_external_fields.sql  012_add_cache_tokens_to_ai_usage_records.sql  013_convert_timestamps_to_timestamptz.sql  (+10 more)
(+483 files in other folders)
